# qua-dashboards

./: .gitignore  LICENSE  README.md  hello.py  pyproject.toml
.github/workflows/: build.yaml  publish-to-pypi.yaml  release-github.yaml  reusable-build.yaml
examples/: README.md  calibrate_video_mode.py  combined_video_mode_voltage_control.py  combined_video_mode_voltage_control_simulated.py  combined_video_mode_voltage_control_simulated_to-dot-system.py  combined_video_mode_voltage_control_simulated_two-dot-system.py  example_data_visualizer.py  example_video_mode_full.py  full_video_mode_example_qdac.py  full_video_mode_example_quam_qd.py  hybrid_opx_qdac_example.py  qarray_simulated_video_mode_example.py  qd_quam_example_video_mode.py  qm_id-65fedca8651dd150369dc7d4456fae522f204cdf717c88db401b091770de21f0.txt  qm_id-8a84b555475a47cb3ab8a177f57e024c096645a1a9f4adfd5cd1db22aae2b701.txt  simulated_random_video_mode_example.py  simulated_video_mode_example.py  video_mode_calibration.json  video_mode_random_data_example.py
examples/combined/: example_video_mode_voltage_control.py
examples/data_dashboard/: README.md  example_data_dashboard.py
examples/debug/: qarray_model_mwe.py  qarray_simulator_mwe.py
examples/video_mode/: DEMO_video_mode.py  README.md  combined_video_mode_voltage_control_simulated_to-dot-system.py  config_video_mode_quam.py  config_video_mode_random.py  example_new_video_mode_random_data.py  example_opx_offset.py  example_video_mode.py  example_video_mode_2_opx.py  example_video_mode_opx.py  example_video_mode_opx1000.py  example_video_mode_opx1k.py  example_video_mode_opx1k_Basic.py  example_video_mode_qd.py  example_video_mode_qdac_opx1k.py  example_video_mode_quam copy.py  example_video_mode_quam.py  example_video_mode_random.md  example_video_mode_random.py  example_video_mode_random_data.py  example_video_mode_simulated.py  example_video_mode_simulated_two-dot-system.py  example_video_mode_simulation.py  example_video_mode_with_QDAC.py  example_video_mode_with_gate_select.py  qua-dashboards.code-workspace  test.py  video_mode_random_data.py
examples/virtual_gates/: README.md  example_virtual_gates.py
examples/virtual_gating/: README.md  example_virtual_gating.py
examples/voltage_control/: README.md  example_voltage_control.py  example_voltage_control_qdac.py  example_voltage_control_simulated.py
qua_dashboards/: logging_config.py
qua_dashboards/data_visualizer/: app.py  examples_data_visualizer.py  plotting.py
qua_dashboards/utils/: dash_utils.py  data_serialisation.py
src/qua_dashboards/: app.py  cli.py
src/qua_dashboards/assets/: index.css  (+2 more)
tests/: test_data_dashboard.py  test_data_visualizer.py
(+143 files in other folders)
