[project]
name = "qua-dashboards"
version = "0.0.1"
description = "Collection of dashboards for the QUA platform"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dash-bootstrap-components>=1.6.0",
    "dash>=2.18.2",
    "pandas>=2.2.3",
    "xarray==2024.07.0",
    "ipykernel>=6.29.5",
    "dash-extensions>=1.0.19",
    "matplotlib>=3.9.0",
    "qualang-tools>=0.18.2",
]

[project.scripts]
qua-dashboard = "qua_dashboards.app:main"
data-dashboard = "qua_dashboards.data_dashboard.data_dashboard_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
